feat: BRN-04: Fix dependency issues throughout the project