@@ -25,25 +25,23 @@ dependencies {
     // REST client (Spring Web)
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // JSON
+    // JSON serialization
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 
-    // Lombok for boilerplate
+    // Lombok for boilerplate reduction
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
 javafx {
     version = "21.0.7"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
-//    configuration = 'compileOnly'
-    configurations = [ 'implementation', 'testImplementation' ]
+    modules = ['javafx.controls', 'javafx.fxml']
+    configurations = ['implementation', 'testImplementation']
 }
 
 application {
     mainClass = "com.algo.trading.gui.MainApp"
     applicationDefaultJvmArgs = [
             '--add-modules=javafx.controls,javafx.fxml'
-//            '--add-modules', 'javafx.controls,javafx.fxml'
     ]
 }
